--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,16 @@
 @plugin "flowbite/plugin";
 @source "../node_modules/flowbite";
 
-@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');*/
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
  
 
 body { 
-  font-family: "Jost", sans-serif;
+  /*font-family: "Jost", sans-serif;*/
+  font-family: "Oswald", sans-serif;
+
   color: #272727;
 }
 
@@ -96,4 +99,33 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 
- 
+.register-banner{
+  background-image: url('../images//banner.jpg');
+}
+
+.details-bg{
+  background-image: url('../images/shadowbox.png');
+  background-size: contain;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+.mainHero{
+  background-image: url(../images/hero.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+   
+}
+
+.overlyhero{
+  background: linear-gradient(to right, #7c4caa, #B14D98);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0.9;
+}
